syntax = "proto3";

package api.proto.v1;

option go_package = "github.com/apetsko/gophkeeper/protogen/api/proto/v1";

import "api/proto/v1/rpc/ping.proto";
import "api/proto/v1/rpc/data_save.proto";
import "api/proto/v1/rpc/data_list.proto";
import "api/proto/v1/rpc/data_delete.proto";

import "google/api/annotations.proto";

service GophKeeper {
  rpc Ping(api.proto.v1.rpc.PingRequest) returns (api.proto.v1.rpc.PingResponse) {
    option (google.api.http) = {
      get: "/v1/ping"
    };
  };

  rpc DataSave(api.proto.v1.rpc.DataSaveRequest) returns (api.proto.v1.rpc.DataSaveResponse) {
    option (google.api.http) = {
      post: "/v1/data/save"
      body: "*"
    };
  };

  rpc DataDelete(api.proto.v1.rpc.DataDeleteRequest) returns (api.proto.v1.rpc.DataDeleteResponse) {
    option (google.api.http) = {
      post: "/v1/data/delete"
      body: "*"
    };
  };

  rpc DataList(api.proto.v1.rpc.DataListRequest) returns (api.proto.v1.rpc.DataListResponse) {
    option (google.api.http) = {
      get: "/v1/data/list"
    };
  };
}
